@@ -41,6 +41,7 @@
 </fieldset>
 <!-- ###SEARCH_FIELD_GROUP### begin -->
 
+<input type="hidden" name="tx_community[searchAction]" value="search" />
 <input type="submit" value="###LLL:search_formSubmitSearch###" />
 
 </form>
